<resources>
    <string name="app_name">HabitTrainer</string>
    <string name="habit_icon">Habit icon</string>
    <string name="drink_water">Drink water</string>
    <string name="drink_water_desc">A refreshing glass of water keeps you hydrated</string>
    <string name="begin_habit">Begin new habit…</string>
    <string name="choose_image">Choose image…</string>
    <string name="image_preview">Image preview</string>
    <string name="save">Save habit</string>
    <string name="eat_an_apple">Eat an apple</string>
    <string name="apple_desc">An apple a day keeps the doctor away</string>
</resources>
