<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context="com.koto.habittrainer.CreateHabitActivity">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eat_an_apple" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apple_desc"
            android:inputType="textMultiLine"
            android:lines="2" />

        <Button
            android:id="@+id/btn_choose_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="chooseImage"
            android:text="@string/choose_image" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/image_preview"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_save"
            android:onClick="storeHabit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#f44336"
            android:visibility="invisible" />

    </LinearLayout>
</ScrollView>